--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="wave">
-        <i style="margin-left: 10px; margin-top:50px">&copy; Developed and Hosted By Sriram And Cyril</i>
+        <i style="margin-left: 10px; margin-top:50px">&copy; Developed and Hosted By Sriram and Arfan</i>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,32L34.3,37.3C68.6,43,137,53,206,96C274.3,139,343,213,411,224C480,235,549,181,617,144C685.7,107,754,85,823,90.7C891.4,96,960,128,1029,170.7C1097.1,213,1166,267,1234,293.3C1302.9,320,1371,320,1406,320L1440,320L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
     </div>
   
