--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     const spinner = document.getElementById("spinner")
     let p = document.querySelector("p")
 
-    async function query(data) {
+    async function query() {
         const response = await fetch(
             "https://api-inference.huggingface.co/models/stabilityai/stable-diffusion-xl-base-1.0",
             {
