--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
             margin-top: 50px;
             text-align: center;
             background-color: #ffffff;
-            padding: 40px;
+            padding: 45px;
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         }
         h2 {
             margin-bottom: 30px;
-            color: #007bff;
+            color: blue;
+            font-family:monospace;
+            font-weight:bold;
         }
         .input-group {
             margin-top: 20px;
@@ -69,10 +71,10 @@
         }
         @media (max-width: 700px) {
             .container {
-                padding: 20px;
+                padding: 60px;
             }
             .wave {
-                margin-top: 60px;
+                margin-top: 80px;
             }
             img {
                 width: 100%;
@@ -86,7 +88,7 @@
         <div class="input-group">
             <input type="text" placeholder="Write your imagination..." />
         </div>
-        <p class="text-danger">Please Enter Anything</p>
+    
         <button>Generate Image</button>
         <div class="spinner" id="spinner">
             <img src="https://cdn.dribbble.com/users/2015153/screenshots/6592242/progess-bar2.gif" class="img-fluid" alt="Loading...">
@@ -95,7 +97,6 @@
     </div>
     <div class="wave">
         <i>&copy; Developed and Hosted By Sriram and Arfan</i>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,32L34.3,37.3C68.6,43,137,53,206,96C274.3,139,343,213,411,224C480,235,549,181,617,144C685.7,107,754,85,823,90.7C891.4,96,960,128,1029,170.7C1097.1,213,1166,267,1234,293.3C1302.9,320,1371,320,1406,320L1440,320L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
     </div>
     <script>
         const token = "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"
@@ -122,12 +123,7 @@
         }
 
         button.addEventListener("click", async function() {
-            if(input.value.trim() === "") {
-                p.style.display = 'block';
-                return;
-            } else {
-                p.style.display = 'none';
-            }
+            
             spinner.style.display = 'block';
             img.style.display = 'none';
             query().then((response) => {
