--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <img id="img" class="img-fluid">
     </div>
     <div class="wave">
-        <i>&copy; Developed and Hosted By Sriram and Arfan</i>
+        <i>&copy; Developed and Hosted By Sriram and Arfan from Muthuthevar Mukkulathore Higher Secondary School, Madurai</i>
     </div>
     <script>
         const token = "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"
