--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             background-color: #f8f9fa;
             font-family: 'Arial', sans-serif;
             transition: 0.7s;
-            overflow-x: hidden;
+            overflow: hidden;
         }
         .container {
             margin-top: 50px;
