--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             background-color: #f8f9fa;
             font-family: 'Arial', sans-serif;
             transition: 0.7s;
-            overflow: hidden;
+            overflow-x: hidden;
         }
         .container {
             margin-top: 50px;
@@ -82,6 +82,7 @@
            color:#fff;
            margin-left: 780px;
            transition: 0.6s;
+            overflow:hidden;
            
         }
         #error .image-err img{
