--- a/index.html
+++ b/index.html
@@ -80,10 +80,7 @@
            padding: 30px 30px;
            border-radius: 15px;
            color:#fff;
-           margin-left: 780px;
-           transition: 0.6s;
-            overflow:hidden;
-           
+           display:none;
         }
         #error .image-err img{
             border-radius: 10px;
@@ -171,12 +168,11 @@
             const userInput = input.value.toLowerCase();
             if (userInput.includes("sex") || userInput.includes("hot") || userInput.includes("nude") || userInput.includes("myia khalifa") || userInput.includes("sexy") || userInput.includes("eliza") || userInput.includes("nudes") || userInput.includes("fuck") || userInput.includes("fucking") || userInput.includes("sucks")) {
                 
-                showerror.style.marginLeft = "0px";
+                showerror.style.display:"none";
                body.style.background = "#C80036"
                 theError.innerHTML = "Our Ai is Not Trained For" + "  " + userInput
                 setTimeout(function(){
-                 showerror.style.marginTop = "-458px"
-                 showerror.style.transition = "0.5s"
+                 showerror.style.display:"block";
                 body.style.background = "#fff"
                 theError.innerHTML = ""      
                 window.location.reload()
