--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
        }
         button.addEventListener("click", async function() {
             const userInput = input.value.toLowerCase();
-            if (userInput.includes("sex") || userInput.includes("hot") || userInput.includes("nude") || userInput.includes("myia khalifa") || userInput.includes("sexy") || userInput.includes("eliza") || userInput.includes("nudes") || userInput.includes("fuck") || userInput.includes("fucking") || userInput.includes("sucks") || userInput.includes("naked") {
+            if (userInput.includes("sex") || userInput.includes("hot") || userInput.includes("nude") || userInput.includes("myia khalifa") || userInput.includes("sexy") || userInput.includes("eliza") || userInput.includes("nudes") || userInput.includes("fuck") || userInput.includes("fucking") || userInput.includes("sucks") || userInput.includes("naked")) {
                 
                 showerror.style.display = "block";
                body.style.background = "#C80036"
