--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
     <div class="wave">
 
-        <i>&copy; Developed and Hosted By Sriram and Arfan from Muthuthevar Mukkulathore Higher Secondary School, Madurai</i>
+        <i>&copy; Developed and Hosted By Sriram </i>
 
     </div>
 
