--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Generative AI Image Generator</h2>
+        <h2>Generative AI Image Generator(2.0)</h2>
         <div class="input-group">
             <input type="text" placeholder="Write your imagination..." />
         </div>
